# crenderer

./: .gitignore  CMakeLists.txt
src/: camera.c  camera.h  display.c  display.h  draw.c  draw.h  input.c  input.h  list.c  list.h  main.c  vector.c  vector.h
src/gfx/: clipping.c  clipping.h  display.c  display.h  draw.c  draw.h  render_settings.h  renderer.c  renderer.h  triangle_renderer.c  triangle_renderer.h
src/math/: angles.c  angles.h  matrix.c  matrix.h  vector.c  vector.h
src/scene/: camera.c  camera.h  lighting.h  mesh.c  mesh.h  scene.c  scene.h  texture.c  texture.h
